##### Sat 29/09/2012
* Nodes without output edges are removed (cross module boundry removal!)

##### Wed 26/09/2012
* New command uniquify
*     make sure all entities have a unique module
*     it is called automatically by extract_sdfg
* New tool: tool/sdfg2pdf
*     display the extracted DFG graph in pdf files

##### Sat 22/09/2012
* New command extract_sdfg
*     extract synchronous data-flow graph SDFG from a module
*     remove cppPNML library as TCPN is not used in the near future
*     add pugixml library back as a parser for the sdfg file

##### Thu 19/07/2012
* Merge dev back to master.
* Remove all parameters in the wriiten out netlist.
* Range reduction finished. No obvious effect in or1200 design.

##### Wed 18/07/2012
* Fixed several small bugs in display.
* The replacing of pre-lists to in-order expressions is finished.

##### Mon 16/07/2012
* Big change in expression and operation. Replace the pre-order equation list to in-order tree.
  It is a pain to handle pre-order list in stream and reduce.

##### Sun 15/07/2012
* Support width calculation in ranges.

##### Sat 14/07/2012
* width support in Netlist::Range and Netlist::RangeArray.
* Add get_width() and set_width() methods to all netlist components.

##### Fri 13/07/2012
* Fixed a bug in cpptcl which allow Tcl:interpreter to be used as a global object.

##### Thu 12/07/2012
* Merge dev back to master.
* Re-write some netlist::Number operations for more general supports of Number operation.

##### Wed 11/07/2012
* merge brach tcl to dev.
* Reimplement all commands using the new C++/Tcl library and the AVS shell env goes back to normal.

##### Tue 10/07/2012
* Expand the C++/Tcl library with extra support of user data, data type vector<string>, read & write Tcl variables.

##### Fri 06/07/2012
* kind of find out a way to handle Tcl list, the bloody bracket!
* Modify the argument parser and add add list checker & list breaker.
* "echo" and "help" are added back to AVS shell.

##### Thu 05/07/2012