@@ -107,6 +107,7 @@ namespace SDFG {
     void add_port_sig(const std::string&, const std::string&); // add a certain port connection
     std::list<boost::shared_ptr<dfgPath> > get_out_paths(unsigned int, const std::set<boost::shared_ptr<dfgNode> >&) const; // return all output paths from this register/port
     std::list<boost::shared_ptr<dfgPath> > get_out_paths_f(unsigned int, const std::set<boost::shared_ptr<dfgNode> >&) const; // return all output paths from this register/port; fast algorithm (only start/end point and type)
+    std::list<boost::shared_ptr<dfgPath> > get_in_paths(unsigned int, const std::set<boost::shared_ptr<dfgNode> >&) const; // return all input paths to this register/port
 
     std::pair<double, double> position; // graphic position
     std::pair<double, double> bbox;     // bounding box
@@ -117,6 +118,13 @@ namespace SDFG {
 
   private:
     void out_path_type_update(std::list<boost::shared_ptr<dfgPath> >&,
+                              boost::shared_ptr<dfgPath>&,
+                              unsigned int,
+                              const std::set<boost::shared_ptr<dfgNode> >&,
+                              std::map<boost::shared_ptr<dfgNode>, std::map<boost::shared_ptr<dfgNode>, int > >&,
+                              std::set<boost::shared_ptr<dfgNode> >&) const; // helper for get_out_paths()
+
+    void in_path_type_update(std::list<boost::shared_ptr<dfgPath> >&,
                               boost::shared_ptr<dfgPath>&,
                               unsigned int,
                               const std::set<boost::shared_ptr<dfgNode> >&,
