@@ -124,6 +124,40 @@ list<shared_ptr<dfgPath> > SDFG::dfgNode::get_out_paths_f(unsigned int pmax, con
   return rv;
 }
 
+list<shared_ptr<dfgPath> > SDFG::dfgNode::get_in_paths(unsigned int pmax, const std::set<shared_ptr<dfgNode> >& sources) const {
+  // return value and the main path
+  list<shared_ptr<dfgPath> > rv;
+  shared_ptr<dfgPath> mp(new dfgPath());       // main path
+  shared_ptr<dfgNode> pn = pg->get_node(id); // this node
+
+  // cache
+  map<shared_ptr<dfgNode>, map<shared_ptr<dfgNode>, int > > rmap; // node relation map
+  std::set<shared_ptr<dfgNode> > dnode_set;                   // dead node set to store the node do not lead to the target
+
+  // initial operation
+  // build up the relation map
+  list<shared_ptr<dfgEdge> > oe_list = pg->get_in_edges_cb(id); // out edge list
+  BOOST_FOREACH(shared_ptr<dfgEdge> e, oe_list) {
+    shared_ptr<dfgNode> src = e->pg->get_source_cb(e->id);
+    if(rmap[pn].count(src))
+      rmap[pn][src] |= e->type;
+    else
+      rmap[pn][src] = e->type;
+  }
+
+  // visit all in nodes
+  for_each(rmap[pn].begin(), rmap[pn].end(),
+           [&](pair<const shared_ptr<dfgNode>, int>& m) {
+             if(pmax == 0  || rv.size() < pmax) {
+               shared_ptr<dfgPath> p(new dfgPath(*mp));
+               p->push_front(m.first, m.second);
+               p->tar = pn;
+               m.first->in_path_type_update(rv, p, pmax, sources, rmap, dnode_set);
+             }
+           });
+  
+  return rv;
+}
 
 void SDFG::dfgNode::out_path_type_update(list<shared_ptr<dfgPath> >& rv, // return path group
                                          shared_ptr<dfgPath>& cp, // current path
@@ -259,6 +293,68 @@ void SDFG::dfgNode::out_path_type_update_f(std::set<shared_ptr<dfgNode> >& endp,
   BOOST_FOREACH(shared_ptr<dfgNode> n, node_next) {
     n->out_path_type_update_f(endp, pmax, targets, rmap, tmap);
   }
+}
+
+void SDFG::dfgNode::in_path_type_update(list<shared_ptr<dfgPath> >& rv, // return path group
+                                        shared_ptr<dfgPath>& cp, // current path
+                                        unsigned int pmax,       // maximal number of path to be returned
+                                        const std::set<shared_ptr<dfgNode> >& sources, // source nodes
+                                        map<shared_ptr<dfgNode>, map<shared_ptr<dfgNode>, int > >& rmap,
+                                        std::set<shared_ptr<dfgNode> >& dnode_set) const {
+  // check whether need to go forward
+  if(pmax != 0 && rv.size() >= pmax) return; // already have enough number of paths
+  
+  // this node
+  shared_ptr<dfgNode> pn = pg->get_node(id);
+
+  // check node type
+  if((pn->type & (SDFG_FF|SDFG_LATCH))         || // register
+     (pn->type & SDFG_PORT && !pn->pg->father)    // top-level output
+     ) {  // ending point
+    if(sources.empty() || sources.count(pn)) {
+      cp->src = pn;
+      rv.push_back(cp);
+    }
+    //std::cout << get_full_name() << " is end point." << std::endl;
+    return;
+  }
+
+  // no loop assert
+  if(cp->node_set.count(pn)) {
+    cp->src = pn;
+    G_ENV->error("SDFG-ANALYSE-0", toString(*cp));
+    return;
+  }
+
+  // check whether it is dead
+  if(dnode_set.count(pn)) return;
+
+  // expand it
+  if(!rmap.count(pn)) {         // new node
+    list<shared_ptr<dfgEdge> > ie_list = pg->get_in_edges_cb(id); // out edge list
+    BOOST_FOREACH(shared_ptr<dfgEdge> e, ie_list) {
+      shared_ptr<dfgNode> src = e->pg->get_source_cb(e->id);
+      if(rmap[pn].count(src))
+        rmap[pn][src] |= e->type;
+      else
+        rmap[pn][src] = e->type;
+    }
+  }
+
+  unsigned int rv_size = rv.size();
+  for_each(rmap[pn].begin(), rmap[pn].end(),
+           [&](pair<const shared_ptr<dfgNode>, int>& m) {
+             shared_ptr<dfgPath> p(new dfgPath(*cp));
+             p->push_front(m.first, m.second);
+             m.first->out_path_type_update(rv, p, pmax, sources, rmap, dnode_set);
+           });
+
+  if(rv.size() == rv_size) {         // this is a dead node
+    dnode_set.insert(pn);
+    rmap.erase(pn);
+    //std::cout << get_full_name() << " is dead." << std::endl;
+  }
+
 }
 
 void SDFG::dfgNode::simplify(std::set<boost::shared_ptr<dfgNode> >& proc_set, bool quiet) {
